# LatticeBoltzmannSolver2D

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.txt
files/: wing.pgm
include/: BoundingBox.h  FileReader.h  Globals.h  Grid.h  Timer.h  ex04_funcs.h
src/: BoundingBox.cpp  FileReader.cpp  Grid.cpp  Timer.cpp  ex04_funcs.cpp  main.cpp
